layout bug fixed.

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -119,7 +119,7 @@ body {
 	}
 	.draw{
 		width: 100%;
-		height: 145px;
+		height: 160px;
 		margin-bottom: 10px;
 		background: url("../img/draw.png") center bottom no-repeat;
 	}
@@ -350,7 +350,7 @@ only screen and (                min-resolution: 2dppx) {
 
 #help {
 	.draw{
-		background: url("../img/draw@2x.png") center center no-repeat;
+		background: url("../img/draw@2x.png") center bottom no-repeat;
 		background-size: 290px 145px;
 	}
 
